<resources>

    <string name="app_name">SmartPharm</string>

    <!-- Pour Login Fragment -->
    <string name="big_logo">big Logo</string>
    <string name="smart_pharm">Smart Pharm</string>
    <string name="champs_adremail_text">Adresse e-mail</string>
    <string name="champs_adremail_Hint">E-mail...</string>
    <string name="champs_password_text">Mot de passe</string>
    <string name="champs_password_Hint">Mot de passe...</string>
    <string name="champs_btn_facebook">Connecter avec Facebook</string>
    <string name="champs_btn_google">Connecter avec Google</string>
    <string name="champs_btn_logIn">Connexion</string>
    <string name="champs_forgetPassword">Mot de passe oublié ?</string>
    <string name="champs_connect_with">ou connecter par:</string>

    <string name="champs_editprof">Modifier le profil </string>
    <string name="champs_comandes">Mes commandes  </string>
    <string name="champs_mespharms">Mes Pharmacies   </string>
    <string name="champs_parametres">Paramètres   </string>
    <string name="Rechercher_placeholder">Rechercher...</string>
    <string name="todo">TODO</string>
    <string name="popmenu_unselected">Wilaya</string>
    <string name="button_Filter">Filter</string>
    <string name="resultat">Resultat: 0</string>
    <string name="text_pharmacy_name">Pharmacie El-Hanaa</string>
    <string name="text_pharmacy_location">Oued Smar-El Harrach-Alger</string>
    <string name="description_arrow_forward">arrow forward</string>
    <string name="description_pharmacy_icon">pharmacy Icon</string>
    <string name="acceuil">Acceuil</string>
    <string name="commandes">Commandes</string>
    <string name="param_tre">Paramètre</string>
    <string name="ici_nom_pharmacy">Ici Nom Pharmacy</string>
    <string name="desc_imagepharmacy">imagePharmacy</string>
    <string name="commanderBTN">Commander</string>
    <string name="about">A propos :</string>
    <string name="name_pharmacy">Pharmacy Pharmacy</string>
    <string name="personicon">personIcon</string>
    <string name="location_pharmacy">Location,Location</string>
    <string name="locationicon">locationIcon</string>
    <string name="titleContact">Prendre contact:</string>
    <string name="gmailicon">gmailIcon</string>
    <string name="ExgmailPharmacy">root@root.com</string>
    <string name="ExphonePharmacy">8765432123</string>
    <string name="phoneicon">PhoneIcon</string>
    <string name="instagramicon">InstagramIcon</string>
    <string name="facebookicon">facebookIcon</string>
    <string name="ExInstagram">Instagram@instagram.com</string>
    <string name="ExFacebook">faceboock@facebook.com</string>
    <string name="buttonAccept">Accepter</string>
    <string name="buttonDecline">Decliner</string>
    <string name="titleordannance">Ordannance</string>
    <string name="imageordonnance">imageOrdonnance</string>
    <string name="titleNote">Remarque</string>
    <string name="PlaceholderNote">Note...</string>
    <string name="camera">camera</string>
    <string name="testitem">TestItem</string>
    <string name="fabadd">FabAdd</string>
    <string name="deconnecterBtn">Deconnecter</string>
    <string name="edit_photo_Btn">Edit Photo</string>
    <string name="photouser">PhotoUser</string>
    <string name="editicon">EditIcon</string>
    <string name="title_nom">Nom:</string>
    <string name="nom_placeholder">Nom...</string>

    <string name="title_location">Localisation:</string>
    <string name="location_placeholder">Localisation...</string>

    <string name="title_email">E-mail:</string>
    <string name="email_placeholder">Email...</string>

    <string name="title_facebook">Facebook:</string>
    <string name="facebook_placeholder">Facebook...</string>

    <string name="title_instagram">Instagram:</string>
    <string name="instagram_placeholder">Instagram...</string>

    <string name="title_phone">Phone:</string>
    <string name="phone_placeholder">Phone...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleDialogUpload">Prendre Photo</string>
    <string name="byCamera">Par appareil photo</string>
    <string name="cancelBtn">Annuler</string>
    <string name="byGallery">Par gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="flash_btn">flash_btn</string>
    <string name="deleteicon">deleteIcon</string>
    <string name="medicationname">Ajouter...</string>
    <string name="ajouter_medicament">Ajouter Medicament</string>
    <string name="annulerbtn">Annuler</string>
    <string name="ajouterbtn">Ajouter</string>
    <string name="progress">Progress</string>
    <string name="uploading_progress">uploading...0%</string>
    <string name="accepterbtn">Accepter</string>
    <string name="rejeterbtn">Rejeter</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="default_notification_channel_id">SmartPharm Notification</string>

    <string name="Province_adrar">Adrar</string>
    <string name="Province_chlef">Chlef</string>
    <string name="Province_laghouat">Laghouat</string>
    <string name="Province_oum_el_bouaghi">Oum El Bouaghi</string>
    <string name="Province_batna">batna</string>
    <string name="Province_bejaia">Béjaia</string>
    <string name="Province_biskra">biskra</string>
    <string name="Province_bechar">Béchar</string>
    <string name="Province_blida">Blida</string>
    <string name="Province_bouira">Bouira</string>
    <string name="Province_tamanrasset">Tamanrasset</string>
    <string name="Province_tebessa">Tébessa</string>
    <string name="Province_tlemcen">Tlemcen</string>
    <string name="Province_tiaret">Tiaret</string>
    <string name="Province_tizi_ouzou">Tizi Ouzou</string>
    <string name="Province_alger">Alger</string>
    <string name="Province_djelfa">Djelfa</string>
    <string name="Province_jijel">Jijel</string>
    <string name="Province_setif">Sétif</string>
    <string name="Province_saida">Saida</string>
    <string name="Province_skikda">Skikda</string>
    <string name="Province_sidi_bel_abbes">Sidi Bel Abbès</string>
    <string name="Province_annaba">Annaba</string>
    <string name="Province_guelma">Guelma</string>
    <string name="Province_constantine">Constantine</string>
    <string name="Province_medea">Médéa</string>
    <string name="Province_mostaganem">Mostaganem</string>
    <string name="Province_msila">M\'Sila</string>
    <string name="Province_mascara">Mascara</string>
    <string name="Province_ouargla">Ouargla</string>
    <string name="Province_oran">Oran</string>
    <string name="Province_elbayadh">El Bayadh</string>
    <string name="Province_illizi">Illizi</string>
    <string name="Province_bordj_bou_arreridj">Bordj Bou Arréridj</string>
    <string name="Province_boumerdes">Boumerdès</string>
    <string name="Province_el_tarf">El Tarf</string>
    <string name="Province_tindouf">Tindouf</string>
    <string name="Province_tissemsilt">Tissemsilt</string>
    <string name="Province_el_oued">El Oued</string>
    <string name="Province_khenchela">Khenchela</string>
    <string name="Province_souk_ahras">Souk Ahras</string>
    <string name="Province_tipaza">Tipaza</string>
    <string name="Province_mila">Mila</string>
    <string name="Province_ain_defla">Aïn Defla</string>
    <string name="Province_Naama">Naâma</string>
    <string name="Province_ain_temouchent">Aïn Témouchent</string>
    <string name="Province_ghardaia">Ghardaïa</string>
    <string name="Province_relizane">Relizane</string>
    <string name="Province_el_mghair">El M\'Ghair</string>
    <string name="Province_el_menia">El Menia</string>
    <string name="Province_ouled_djellal">Ouled Djellal</string>
    <string name="Province_bordj_baji_mokhtar">Bordj Baji Mokhtar</string>
    <string name="Province_beni_abbes">Béni Abbès</string>
    <string name="Province_timimoun">Timimoun</string>
    <string name="Province_touggourt">Touggourt</string>
    <string name="Province_djanet">djanet</string>
    <string name="Province_in_salah">In Salah</string>
    <string name="Province_in_guezzam">In Guezzam</string>
    <string name="no_Province">Wilaya</string>
    <string name="not_found">Pas trouver</string>
    <string name="default_string">TextView</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="continued_without_login">Continuer sans se connecter</string>
    <string name="champs_btn_toLogin">Se connecter</string>
    <string name="dropped_pin">dropped pin</string>
    <string name="btn_proceed">Process</string>


</resources>