<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_Province_adrar"
        android:title="@string/Province_adrar"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_chlef"
        android:title="@string/Province_chlef"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_laghouat"
        android:title="@string/Province_laghouat"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_oum_el_bouaghi"
        android:title="@string/Province_oum_el_bouaghi"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_batna"
        android:title="@string/Province_batna"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_bejaia"
        android:title="@string/Province_bejaia"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_biskra"
        android:title="@string/Province_biskra"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_bechar"
        android:title="@string/Province_bechar"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_blida"
        android:title="@string/Province_blida"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_bouira"
        android:title="@string/Province_bouira"
        app:showAsAction="never"/>

    <!--/////////////////////////////////////////////////////////-->

    <item
        android:id="@+id/action_Province_tamanrasset"
        android:title="@string/Province_tamanrasset"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_tebessa"
        android:title="@string/Province_tebessa"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_tlemcen"
        android:title="@string/Province_tlemcen"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_tiaret"
        android:title="@string/Province_tiaret"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_tizi_ouzou"
        android:title="@string/Province_tizi_ouzou"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_alger"
        android:title="@string/Province_alger"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_djelfa"
        android:title="@string/Province_djelfa"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_jijel"
        android:title="@string/Province_jijel"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_setif"
        android:title="@string/Province_setif"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_saida"
        android:title="@string/Province_saida"
        app:showAsAction="never"/>

    <!--/////////////////////////////////////////////////////////-->

    <item
        android:id="@+id/action_Province_skikda"
        android:title="@string/Province_skikda"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_sidi_bel_abbes"
        android:title="@string/Province_sidi_bel_abbes"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_annaba"
        android:title="@string/Province_annaba"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_guelma"
        android:title="@string/Province_guelma"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_constantine"
        android:title="@string/Province_constantine"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_medea"
        android:title="@string/Province_medea"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_mostaganem"
        android:title="@string/Province_mostaganem"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_msila"
        android:title="@string/Province_msila"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_mascara"
        android:title="@string/Province_mascara"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_ouargla"
        android:title="@string/Province_ouargla"
        app:showAsAction="never"/>

    <!--/////////////////////////////////////////////////////////-->

    <item
        android:id="@+id/action_Province_oran"
        android:title="@string/Province_oran"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_elbayadh"
        android:title="@string/Province_elbayadh"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_illizi"
        android:title="@string/Province_illizi"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_bordj_bou_arreridj"
        android:title="@string/Province_bordj_bou_arreridj"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_boumerdes"
        android:title="@string/Province_boumerdes"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_el_tarf"
        android:title="@string/Province_el_tarf"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_tindouf"
        android:title="@string/Province_tindouf"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_tissemsilt"
        android:title="@string/Province_tissemsilt"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_el_oued"
        android:title="@string/Province_el_oued"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_khenchela"
        android:title="@string/Province_khenchela"
        app:showAsAction="never"/>

    <!--/////////////////////////////////////////////////////////-->

    <item
        android:id="@+id/action_Province_souk_ahras"
        android:title="@string/Province_souk_ahras"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_tipaza"
        android:title="@string/Province_tipaza"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_mila"
        android:title="@string/Province_mila"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_ain_defla"
        android:title="@string/Province_ain_defla"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_Naama"
        android:title="@string/Province_Naama"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_ain_temouchent"
        android:title="@string/Province_ain_temouchent"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_ghardaia"
        android:title="@string/Province_ghardaia"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_relizane"
        android:title="@string/Province_relizane"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_el_mghair"
        android:title="@string/Province_el_mghair"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_el_menia"
        android:title="@string/Province_el_menia"
        app:showAsAction="never"/>

    <!--/////////////////////////////////////////////////////////-->

    <item
        android:id="@+id/action_Province_ouled_djellal"
        android:title="@string/Province_ouled_djellal"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_bordj_baji_mokhtar"
        android:title="@string/Province_bordj_baji_mokhtar"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_beni_abbes"
        android:title="@string/Province_beni_abbes"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_timimoun"
        android:title="@string/Province_timimoun"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_touggourt"
        android:title="@string/Province_touggourt"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_djanet"
        android:title="@string/Province_djanet"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_in_salah"
        android:title="@string/Province_in_salah"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_Province_in_guezzam"
        android:title="@string/Province_in_guezzam"
        app:showAsAction="never"/>

</menu>